--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@fortawesome/free-brands-svg-icons": "^6.4.0",
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"daisyui": "^2.51.5",
+		"dotenv": "^16.0.3",
 		"svelte-fa": "^3.0.3",
 		"uuid": "^9.0.0"
 	}
