--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/chjeckout@v3
+        uses: actions/checkout@v3
 
       - uses: docker/metadata-action@v4
         id: meta
